--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <button class="generate-password bg-[#04AA6D] hover:scale-110 transition-all duration-200 text-green-50 m-2 p-2 rounded-md font-bold">Generate Password</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
     
 </html>
